kubernetes/websocket-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket
spec:
  selector:
    app: websocket
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
  sessionAffinity: ClientIP
