kubernetes/websocket-server/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websocket-http
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: websocket.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: websocket
                port:
                  number: 80
